:sparkles: added request delegation using snap to sign

--- a/packages/example/frontend/index.css
+++ b/packages/example/frontend/index.css
@@ -28,6 +28,13 @@ button {
     justify-content: center;
     font-size: calc(10px + 2vmin);
 }
+.App-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+}
 
 .App-link {
     color: rgb(26, 117, 255);
